Fixed friend list overflow

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,7 @@
 .site {
     display: grid;
 
-    grid-template-columns: 80vw 20vw;
+    grid-template-columns: auto 360px;
     grid-template-rows: auto 8em 1fr;
     grid-template-areas:
         'header header'
@@ -29,9 +29,24 @@
     width: 19vw;
 }
 
-.friend-list {
-    grid-area: friend-list;
+::-webkit-scrollbar {
+    width: 4px;
+}
 
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #333; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #777; 
+    border-radius: 10px;
+}
+
+.friend-list {
+    overflow: auto;
+    grid-area: friend-list;
+    min-width: 360px;
     background-color: #333;
     color: #FFF
 }
@@ -68,7 +83,6 @@
 
     .friend-list {
         grid-area: main;
-
         margin-left: 98vw;
         padding-left: 15px;
         width: 100vw;
